# app

./: README.md  angular.json  package-lock.json  package.json
.github/workflows/: format.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/auth/: login.rs  mod.rs  register.rs  response_struct.rs
src-tauri/src/keys/: identity.rs  mod.rs  one_time_prekey.rs  signed_prekey.rs
src-tauri/src/logger/: macros.rs  mod.rs  syslog.rs
src/app/: app.routes.ts
src/app/models/: auth.models.ts  user.models.ts
src/app/pages/background/: background.component.css  background.component.html
src/app/pages/home/: home.component.html  home.component.ts
src/app/pages/login/: login.component.css  login.component.html  login.component.ts
src/app/pages/login-completed/: login-completed.component.css  login-completed.component.html  login-completed.component.spec.ts  login-completed.component.ts
src/app/services/: auth.service.ts
src/app/utils/errors/: generic-error-mapper.ts
src/app/utils/errors/http/: login-error-mapper.ts  register-error-mapper.ts
