[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"
reqwest = { version = "0.12.23", features = ["json"] }
hkdf = "0.12.4"
rand = "0.8"
rand_core = "0.6.4"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
